<resources>
    <string name="app_name">newchallenge2</string>
    <string name="peduli_lindungi">Peduli Lindungi</string>
    <string name="pulsa_tagihan_amp_hiburan"><![CDATA[Pulsa, Tagihan, & Hiburan]]></string>
    <string name="spaylater">SPayLater</string>
    <string name="shopee_supermarket">Shopee Supermarket</string>
    <string name="shopee_mall">Shopee Mall</string>
    <string name="shopeepay_sekitarmu">ShopeePay Sekitarmu</string>
    <string name="gratis_ongkir_amp_voucher"><![CDATA[Gratis Ongkir & Voucher]]></string>
    <string name="bayar_di_tempat">Bayar Di Tempat</string>
    <string name="shopee_food">Shopee Food</string>
    <string name="serba_seribu">Serba Seribu</string>
    <string name="lihat_lainnya">Lihat Lainnya</string>
    <string name="flash_sale">FLASH SALE</string>
    <string name="rp67_000">Rp67.000</string>
    <string name="rp4_982_000">Rp4.982.000</string>
    <string name="isi_saldo_shopeepay">Isi Saldo Shopeepay</string>
    <string name="_928_300_coins">928.300 Coins</string>
    <string name="makin_seru">Makin Seru</string>
    <string name="aktifkan_dan_sambungkan_gopay_amp_gopaylater_di_tokopedia"><![CDATA[Aktifkan dan Sambungkan GoPay & GoPayLater di Tokopedia]]></string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="ada_voucher_nganggur_nih">Ada voucher nganggur, nih</string>
    <string name="restoran_terdekat">Restoran terdekat</string>
    <string name="gopay">gopay</string>
    <string name="rp5_379">Rp5.379</string>
    <string name="klik_amp_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>
    <string name="bayar">Bayar</string>
    <string name="top_up">Top Up</string>
    <string name="eksplor">Eksplor</string>
    <string name="sambungin_akun_ke_tokopedia_banyakin_untung">Sambungin Akun ke Tokopedia, Banyakin Untung</string>
    <string name="promo_belanja_online_10_10_cashback_hingga_rp100_000">Promo Belanja Online 10.10: Cashback hingga Rp100.000</string>
    <string name="_193_xp_lagi_ada_harta_karun">193 XP lagi ada Harta Karun</string>
    <string name="harta_karun_bentar_lagi_hilang">Harta karun bentar lagi hilang</string>
    <string name="goride">GoRide</string>
    <string name="gocar">GoCar</string>
    <string name="gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="gomart">GoMart</string>
    <string name="others">Others</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="ke_kanan">Ke Kanan</string>
    <string name="icon">icon</string>
    <string name="profile">profile</string>
    <string name="banner">banner</string>
    <string name="kacamata">kacamata</string>
    <string name="toner">toner</string>
    <string name="snack">snack</string>
    <string name="jam_tangan">jam tangan</string>
    <string name="keranjang">keranjang</string>
    <string name="chat">chat</string>
    <string name="qr_code">qr code</string>
    <string name="home">Home</string>
    <string name="discount">Discount</string>
    <string name="pesanan">Pesanan</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="feed">Feed</string>
    <string name="shopee_live">Shopee Live</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="saya">Saya</string>
    <string name="promo">Promo</string>
</resources>