<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:text="@string/flash_sale"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_lainnya"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:background="@android:color/transparent"
            app:tint="@color/grey"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/ke_kanan"
            />


    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:src="@drawable/shopee_item_1"
                        android:contentDescription="@string/kacamata"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp67_000"
                        android:textColor="@color/orange"/>

                    <ProgressBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progress="25"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:src="@drawable/shopee_item_2"
                        android:contentDescription="@string/toner"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp67_000"
                        android:textColor="@color/orange"/>

                    <ProgressBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progress="25"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:src="@drawable/shopee_item_3"
                        android:contentDescription="@string/snack"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp67_000"
                        android:textColor="@color/orange"/>

                    <ProgressBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progress="25"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:src="@drawable/shopee_item_4"
                        android:contentDescription="@string/jam_tangan"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp67_000"
                        android:textColor="@color/orange"/>

                    <ProgressBar
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:progress="25"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>


    </HorizontalScrollView>





</LinearLayout>