<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp"
        >

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/gojek_gradient_goclub">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_star"
                app:tint="@color/green"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/icon"
                />

            <TextView
                android:id="@+id/text_frame1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/_193_xp_lagi_ada_harta_karun"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/card_image"
                tools:ignore="RelativeOverlap" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_frame1"
                android:layout_toEndOf="@id/card_image"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:max="200"
                android:progress="154"
                />

            <TextView
                android:id="@+id/text_frame2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/harta_karun_bentar_lagi_hilang"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/card_image"
                android:layout_below="@id/text_frame1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/grey"
                android:contentDescription="@string/ke_kanan"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>





</RelativeLayout>