<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/akses_cepat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akses_cepat"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/akses_cepat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/green"
                    android:contentDescription="@string/ada_voucher_nganggur_nih" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/ada_voucher_nganggur_nih"
                    android:layout_marginStart="10dp"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/grey"
                    android:contentDescription="@string/ke_kanan" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_food"
                    android:background="@drawable/gojek_item_red_background"
                    android:contentDescription="@string/restoran_terdekat"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/restoran_terdekat"
                    android:layout_marginStart="10dp"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/grey"
                    android:contentDescription="@string/ke_kanan"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>